fix(partner): Montreal visibility protocol

--- a/webroot/less/partner.less
+++ b/webroot/less/partner.less
@@ -31,6 +31,11 @@
   text-align: right;
 }
 
+.partner-text-premium-bottom {
+  &:extend(.partner-text-premium);
+  font-size: 14px;
+}
+
 .partner-text-sponsor {
   color: silver;
   text-align: right;
